--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "dropzone": "^6.0.0-beta.2",
         "flowbite": "^2.3.0",
         "jquery": "^3.7.1"
     }
