--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/typography": "^0.5.13",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.6.4",
@@ -18,6 +19,13 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@tiptap/core": "^2.3.1",
+        "@tiptap/extension-heading": "^2.3.1",
+        "@tiptap/extension-paragraph": "^2.3.1",
+        "@tiptap/extension-placeholder": "^2.3.1",
+        "@tiptap/extension-text": "^2.3.1",
+        "@tiptap/pm": "^2.3.1",
+        "@tiptap/starter-kit": "^2.3.1",
         "dropzone": "^6.0.0-beta.2",
         "flowbite": "^2.3.0",
         "jquery": "^3.7.1"
