feat: administration panel base

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,5 +27,10 @@ jobs:
                              git pull origin main &&
                              npm install &&
                              composer install &&
+                             php artisan vendor:publish --provider="Spatie\Permission\PermissionServiceProvider" &&
                              php artisan migrate &&
+                             sail artisan create:admin-account &&
+                             php artisan icons:cache &&
+                             hp artisan filament:clear-cached-components &&
+                             php artisan filament:cache-components
                              npm run build'
