--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@tiptap/starter-kit": "^2.3.1",
         "dropzone": "^6.0.0-beta.2",
         "flowbite": "^2.3.0",
-        "jquery": "^3.7.1"
+        "jquery": "^3.7.1",
+        "sweetalert2": "^11.10.8"
     }
 }
