--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@alpinejs/intersect": "^3.13.10",
         "@tiptap/core": "^2.3.1",
         "@tiptap/extension-heading": "^2.3.1",
         "@tiptap/extension-paragraph": "^2.3.1",
