--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -26,4 +26,4 @@ jobs:
             commit_message: Fix styling
             branch: ${{ steps.extract_branch.outputs.branch }}
           env:
-            GITHUB_TOKEN: ${{ secrets.PHP-CS-FIXER-TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.PHP_CS_FIXER_TOKEN }}
